# bricks

./: .clang-tidy  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  README_8md.html  algorithm_8hpp.html  algorithm_8hpp.js  algorithm_8hpp__incl.map  algorithm_8hpp__incl.md5  algorithm_8hpp_source.html  annotated.html  annotated_dup.js  charconv_8hpp.html  charconv_8hpp.js  charconv_8hpp__incl.map  charconv_8hpp__incl.md5  charconv_8hpp_source.html  classbricks_1_1bad__result__access.html  classbricks_1_1concurrent-members.html  classbricks_1_1concurrent.html  classbricks_1_1concurrent.js  classbricks_1_1mutex-members.html  classbricks_1_1mutex.html  classbricks_1_1mutex.js  classbricks_1_1result-members.html  classbricks_1_1result.html  classbricks_1_1result.js  classbricks_1_1rw__lock-members.html  classbricks_1_1rw__lock.html  classbricks_1_1rw__lock.js  classbricks_1_1timer-members.html  classbricks_1_1timer.html  classbricks_1_1timer.js  classes.html  conanfile.py  concurrent_8hpp.html  concurrent_8hpp.js  concurrent_8hpp__incl.map  concurrent_8hpp__incl.md5  (+161 more)
.github/actions/setup/: action.yml
.github/workflows/: codeql.yml  default.yml
docs/: Doxyfile  doxygen-awesome.css  header.html
include/: meson.build
include/bricks/: algorithm.hpp  charconv.hpp  concurrent.hpp  enumerate.hpp  filter.hpp  handle.hpp  mutex.hpp  ranges.hpp  result.hpp  reverse.hpp  rw_lock.hpp  timer.hpp  type_traits.hpp  zip.hpp
include/bricks/detail/: contains.hpp  enumerate.hpp  filter.hpp  find.hpp  index_of.hpp  lock_guard.hpp  read_guard.hpp  reverse.hpp  write_guard.hpp  zip.hpp
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_4.js  files_1.js  files_4.js  files_5.js  files_6.js  files_7.js  files_8.js  files_9.js  functions_0.js  functions_1.js  functions_10.js  functions_2.js  functions_3.js  functions_4.js  functions_5.js  functions_7.js  functions_9.js  functions_a.js  (+19 more)
tests/: algorithm_test.cpp  charconv_test.cpp  concurrent_test.cpp  contains_test.cpp  enumerate_test.cpp  filter_test.cpp  find_test.cpp  handle_test.cpp  index_of_test.cpp  main.cpp  meson.build  mutex_test.cpp  result_test.cpp  reverse_test.cpp  rw_lock_test.cpp  string_makers.hpp  test_error.hpp  timer_test.cpp  type_traits_test.cpp  zip_test.cpp
